[package]
name = "npm-expansions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-husky = "1.5.0"
levenshtein = "1.0.5"
rand = "0.8.4"
strsim = "0.10.0"
tempfile = "3.5.0"
test-case = "3.0.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]
